RESOLVED FIXED73908
[Qt] Fix assertion in QtWebPageEventHandler.cpp
https://bugs.webkit.org/show_bug.cgi?id=73908
Summary [Qt] Fix assertion in QtWebPageEventHandler.cpp
Alexander Færøy
Reported 2011-12-06 04:36:11 PST
QtWebPageEventHandler.cpp:343: ASSERT(!m_interactionEngine->pinchGestureActive()); Patch coming up.
Attachments
Patch (1.38 KB, patch)
2011-12-06 04:38 PST, Alexander Færøy
no flags
Alexander Færøy
Comment 1 2011-12-06 04:38:24 PST
Kenneth Rohde Christiansen
Comment 2 2011-12-06 04:39:38 PST
Comment on attachment 118026 [details] Patch cq+ as requested by ahf
WebKit Review Bot
Comment 3 2011-12-06 06:17:31 PST
Comment on attachment 118026 [details] Patch Clearing flags on attachment: 118026 Committed r102130: <http://trac.webkit.org/changeset/102130>
WebKit Review Bot
Comment 4 2011-12-06 06:17:35 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.