[Qt] Fix assertion in QtWebPageEventHandler.cpp https://bugs.webkit.org/show_bug.cgi?id=73908

Patch by Alexander Færøy <alexander.faeroy@nokia.com> on 2011-12-06
Reviewed by Kenneth Rohde Christiansen.

* UIProcess/qt/QtViewportInteractionEngine.cpp:
(WebKit::QtViewportInteractionEngine::QtViewportInteractionEngine):

Canonical link: https://commits.webkit.org/90578@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102130 268f45cc-cd09-0410-ab3c-d52691b4dbfc